# revenue-audit-risk-response-mapper

./: .gitignore  AGENTS.md  README.md  app.py  index.html  index_llm_api.html  pyproject.toml  requirements.txt  risk_extraction_prompt_static.js
config/: scoring.yaml
data/seed/: procedure_library.csv  risk_keyword_library.csv  risk_procedure_mapping.csv  risk_signal_library.csv  scenario_templates.csv  tag_dictionary.csv
docs/: DATA_CARD.md  DATA_DICTIONARY.md  DOMAIN_LIMITATIONS.md  ERROR_ANALYSIS.md  EXPERT_REVIEW_GUIDE.md  MODEL_CARD.md  PORTFOLIO_SUMMARY.md
scripts/: evaluate_models.py  generate_dataset.py  train_models.py  validate_dataset.py
src/audit_risk_mapper/: config.py  coverage_checker.py  data_io.py  evaluation.py  feature_engineering.py  feedback_store.py  model_training.py  question_generator.py  recommender.py  rule_engine.py  scenario_generator.py  schemas.py  validators.py
tests/: test_data_io.py  test_feedback.py  test_generation.py  test_recommender.py
